--- a/css/style.css
+++ b/css/style.css
@@ -8,20 +8,70 @@ Dark green: #28b485
 */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.7;
-    color: #777;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.7;
+  color: #777;
+  padding: 30px;
 }
 
 .header {
-    height: 95vh;
-    background-image: url(../img/hero.jpg);
+  height: 95vh;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(126, 213, 111, 0.807),
+      rgba(40, 180, 133, 0.807)
+    ),
+    url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  position: relative;
+
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
+
+.logo-box {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+}
+
+.logo-box .logo {
+  height: 35px;
+}
+
+.text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.heading-primary-main,
+.heading-primary-sub {
+  display: block;
+}
+
+.heading-primary-main {
+  font-weight: 400;
+  font-size: 60px;
+  letter-spacing: 35px;
+}
+
+.heading-primary-sub {
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 17.4px;
 }
