--- a/css/style.css
+++ b/css/style.css
@@ -52,13 +52,15 @@ body {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
 
-  backface-visibility: hidden; 
+  backface-visibility: hidden;
+  margin-bottom: 60px;
 }
 
 .heading-primary-main,
@@ -79,7 +81,7 @@ body {
 .heading-primary-sub {
   font-weight: 700;
   font-size: 20px;
-  letter-spacing: 17.4px;
+  letter-spacing: 15px;
   animation: moveInRight 1s ease-out;
 }
 
@@ -113,4 +115,70 @@ body {
     opacity: 1;
     transform: translate(0);
   }
+}
+
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all 0.3s ease-in-out;
+  position: relative;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.btn-white::after{
+  background-color: #fff;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-animated{
+  animation: moveInBottom 1s ease-in-out .75s;
+  animation-fill-mode: backwards;
 }
