--- a/css/style.css
+++ b/css/style.css
@@ -44,17 +44,17 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
   top: 4rem;
   left: 4rem;
 }
 
-.logo-box .logo {
+.header__logo-box .header__logo {
   height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -70,12 +70,12 @@ body {
   margin-bottom: 6rem;
 }
 
-.heading-primary-main,
-.heading-primary-sub {
+.heading-primary--main,
+.heading-primary--sub {
   display: block;
 }
 
-.heading-primary-main {
+.heading-primary--main {
   font-weight: 400;
   font-size: 6rem;
   letter-spacing: 3.5rem;
@@ -85,7 +85,7 @@ body {
   animation-timing-function: ease-out;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   font-weight: 700;
   font-size: 2rem;
   letter-spacing: 1.5rem;
@@ -158,7 +158,7 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -176,7 +176,7 @@ body {
   transition: all 0.4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
@@ -185,7 +185,7 @@ body {
   opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
   animation: moveInBottom 1s ease-in-out 0.75s;
   animation-fill-mode: backwards;
 }
